prod/django-app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: django-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: django-app
  name: django-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
    spec:
      containers:
      - image: haroonniamat029/django-app:latest
        imagePullPolicy: Always
        name: django-app
        ports:
        - containerPort: 8000
          protocol: TCP
      
---
apiVersion: v1
kind: Service
metadata:
  namespace: django-app
  name: django-app-service
spec:
  selector:
      app.kubernetes.io/name: django-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30004
