prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000M
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1000M



  name: my-django-app-service
  namespace: django-app
spec:
  rules:
  - host: devclouds.live
    http:
      paths:
      - backend:
          service:
            name: my-django-app-service
            port:
              number: 80
        pathType: ImplementationSpecific
